# LightNovelMicroservice

./: .gitignore  README.md  docker-compose.yml
AuthorService/: AuthorService.csproj  Dockerfile  Program.cs  appsettings.Development.json
AuthorService/Data/: SeedData.cs
AuthorService/Profiles/: AuthorProfile.cs
AuthorService/Properties/: launchSettings.json
AuthorService/Protos/: author.proto
Dotnet_NovelService/: Dockerfile  Program.cs  appsettings.json
NodeJS_NovelService/: index.js  package.json
NodeJS_NovelService/graphql/resolvers/: lightNovelResolvers.js
NodeJS_NovelService/grpcServices/: authorClient.js
NodeJS_NovelService/protos/: author.proto
NovelService/: data.json  package.json
NovelService/graphql/: typeDefs.js
NovelService/graphql/resolvers/: index.js  lightNovelResolvers.js
NovelService/protos/: author.proto
fastapi-novelservice/: pyproject.toml
fastapi-novelservice/novel-service/: app.py
fastapi-novelservice/novel-service/grpc_author/: author_pb2.py  author_pb2_grpc.py
fastapi-novelservice/novel-service/models/: author.py  camel_model.py  light_novel.py
fastapi-novelservice/novel-service/routers/: novels.py
fastapi-novelservice/novel-service/services/: grpc_author_client.py
